# mujoco-taxim

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
Basics/: sensorParams.py
OpticalSimulation/: ply_comparison.py  simOptical.py
examples/MarkerMotionSimulation/: simMarkMotionField.py
examples/MarkerMotionSimulation/compose/: dataLoader.py  superposition.py
examples/OpticalSimulation/: simOptical.py
examples/mujoco/: demo_mujoco_digit.py
examples/mujoco/xml/: tacto_common.xml  touch_playground_rot.xml
mujoco/examples/: demo_mujoco_digit.py  simOptical.py
mujoco/examples/xml/: touch_playground_rot.xml
src/TaximSensor/: __init__.py
src/TaximSensor/Basics/: CalibData.py
src/TaximSensor/Calibration/: generateShadowMasks.py  generateTensorMap.py  polyTableCalib.py
