[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-taxim"
dynamic = ["version"]
description = "Mujoco integration of Taxim, a simulator for vision-based tactile sensors."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Zilin Si", email = "zilin.si@example.com" },
    { name = "Wenzhen Yuan", email = "wenzhen.yuan@example.com" },
    { name = "Seongjin Bien", email = "seongjin.bien@utn.de" },

]
maintainers=[
    { name = "Seongjin Bien", email = "seongjin.bien@utn.de"}
]
keywords = ["science","digit","tactile","simulation","tactile sensors"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.18.5",
    "matplotlib>=3.1.3",
    "opencv-python>=3.4.2.17",
    "mujoco>=3.2.0",
    "trimesh>=4.8.3",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/Robo-Touch/Taxim"
"Repository" = "https://github.com/utn-air/mujoco-taxim"
RCS = "https://github.com/utn-mi/robot-control-stack"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.package-data]
TaximSensor = ["calibs/**/*"]

[tool.setuptools.dynamic]
version = { attr = "TaximSensor.__version__" }